# GenAI

./: .gitignore  MODEL_ARCHITECTURE.md  PERFORMANCE_AUDIT.md  README.md  REPO_STRUCTURE.md  blackwell_gb10_performance_audit.md  onlypores.py  pyproject.toml  requirements.txt  vae_report_tmp.md
configs/datasets/: split_v1.yaml  split_v2.yaml
configs/eval/: full.yaml  minimal.yaml  r03_base.yaml  r03_paper.yaml
configs/experiments/r03/: base.yaml  split_v1.yaml
configs/experiments/r04/: base.yaml
configs/experiments/r05/: base.yaml
configs/losses/: vae_charbonnier_mask_kl.yaml
configs/machines/: dgx_spark.yaml
configs/profiles/: fast.yaml  repro.yaml
configs/training/: vae_default.yaml
debug_reconstruction_report/: report.txt
docs/: metrics_guide.md
notebooks/: 10_train_vae.ipynb  11_eval_vae.ipynb  R03_train_vae.ipynb  eval_results.ipynb  r03a_auxiliary_decoder.ipynb  r03b_latent_analysis.ipynb  train_vae.ipynb
scripts/: build_dataset.sh  commands.txt  connect_jupyter.sh  convert_patch_samples_to_tiff.py  debug_reconstruction.py  eval_checkpoint.py  eval_r03.py  experiments.py  jupyter 1.slurm  rebuild_tensorboard.py  train_vae.py
src/poregen/: __init__.py
src/poregen/analysis/: r03.py  (+1 more)
tests/: test_blended_reconstruction.py  test_config_loading.py  test_dataset_loader_shapes.py  test_integral_porosity.py  test_latent_metrics.py  test_losses_smoke.py  test_patch_coords_count.py  test_patch_sample_export.py  test_recon_metrics.py  test_split_dataset_roots.py  test_train_vae_migration.py  test_vae_output_shapes.py  test_volume_split_counts.py
(+73 files in other folders)
