[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poregen"
version = "0.1.0"
description = "Latent diffusion for synthetic XCT pore generation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "zarr>=2.16",
    "numcodecs>=0.12",
    "tifffile>=2023.7",
    "pyarrow>=14.0",
    "pandas>=2.0",
    "torch>=2.0",
    "tqdm>=4.65",
    "psutil>=5.9",
    "scikit-image>=0.21",
    "fill-voids>=2.0",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
notebook = [
    "jupyterlab>=4.0",
    "matplotlib>=3.7",
    "ipywidgets>=8.0",
    "tensorboard>=2.14",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
]

[project.scripts]
build_dataset = "poregen.dataset.build_dataset:main"
train_vae = "poregen.cli.experiments:main"
experiments = "poregen.cli.experiments:main"

[tool.setuptools.packages.find]
where = ["src"]
